      warnings.
  * debian/rules:
    - Remove src/librrd.sym in the clean target - this file is automatically
      created during the build but not cleaned up in the upstream Makefiles.
    - Remove .txt and .pod documentation from the 'rrdtool' binary package -
      the manpages are a lot more useful.
    - Pass --fail-missing (instead of --list-missing) to dh_install.
  * Added new binary package rrdtool-dbg. Unfortunately, segfaults and the
    like are not uncommon in rrdtool - this will help to trace them back more
    easily (Closes: #518480).
  * debian/README.Debian:
    - Added new file with a short paragraph about the available documentation.
  * debian/control:
    - Moved librrd-ruby* packages from section "interpreters" to the newly
      added section "ruby".
    - Updated standards-version to 3.8.1 - no changes.
  * debian/librrd-dev.install:
    - Added /usr/lib/pkgconfig/librrd.pc (Closes: #522144).
  * debian/rrdtool.install, debian/rrdtool.examples:
    - Install examples/* and ifOctets.tcl using dh_install instead of
      dh_installexamples. This allows the use of --fail-missing when running
      dh_install.

 -- Sebastian Harl <sh@tokkee.org>  Fri, 08 May 2009 18:00:59 +0200

rrdtool (1.3.1-4) unstable; urgency=high

  * Urgency set to high because of the fix for #499350.
  * debian/patches:
    - Added upstream patch bts499350-data-corruption (upstream SVN r1480) to
      fix data corruption when updating multiple values in one go
      (Closes: #499350).
      (upstream bug #178 - http://oss.oetiker.ch/rrdtool-trac/ticket/178)
    - Added bts498183-segfault-madvise to fix a segfault on sparc caused by a
      wrong argument passed to madvise(2) - thanks to Jurij Smakov for
      valuable debugging information (Closes: #498183).
    - Added upstream patch bts496847-error-handling (upstream SVN r1471) to
      fix error handling of syscalls in rrdtool(1) (Closes: #496847).